Upgrading the version to 3.0.0 and fixing some bugs and upgrading to java 11.