@@ -1,50 +1,83 @@
 import java.nio.file.Paths
+import org.gradle.internal.os.OperatingSystem
 
-group 'download-station-helper'
-version '2.1.9'
+plugins {
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.8'
+    id "io.freefair.lombok" version "5.0.0-rc6"
+}
 
-
-apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'application'
-
-sourceCompatibility = 1.8
-mainClassName = 'pg.Main'
+javafx {
+    version = "11.0.2"
+    modules = [ 'javafx.fxml','javafx.controls', 'javafx.media', 'javafx.web', 'javafx.swing' ]
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.8.2'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8.2'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.0'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.0'
-    compile group: 'pl.project13.maven', name: 'git-commit-id-plugin', version: '2.2.4'
-    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.2'
+    compile 'org.apache.httpcomponents:httpclient:4.5.12'
+    compile 'org.apache.logging.log4j:log4j-api:2.13.1'
+    compile 'org.apache.logging.log4j:log4j-core:2.13.1'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.10.3'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.10.3'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.10.3'
+    compile 'pl.project13.maven:git-commit-id-plugin:2.2.6'
+    compile "org.openjfx:javafx-base:$javafx.version"
+    compile "org.openjfx:javafx-controls:$javafx.version"
+    compile "org.openjfx:javafx-graphics:$javafx.version"
+    compile "org.openjfx:javafx-controls:$javafx.version"
+    compile "org.openjfx:javafx-fxml:$javafx.version"
 
-
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.hamcrest', name: 'hamcrest-junit', version: '2.0.0.0'
-    testCompile group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
-    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.11.1'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'org.hamcrest', name: 'hamcrest-junit', version: '2.0.0.0'
+    testImplementation group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.15.0'
 }
 
-def jarName = "DSHelper"
-def jarNameFx = "DSHelper-FX"
-def fxMainClassName = 'pg.FXMain'
+group 'download-station-helper'
+def appVersion = "3.0.0"
+
+def fxMainClassName = 'pg.Java11Main'
+def jarName = "DSHelper-11+"
+def jarNameFx = "DSHelper-FX11+"
+
+mainClassName = fxMainClassName
+
+
 
 def addScriptToRunFXFile = {
-    def runImdbFile = Paths.get(buildDir.getAbsolutePath(), 'libs', 'runFX.sh').toFile()
-    runImdbFile.append('echo \'Start program\'')
-    runImdbFile.append('\necho \'.............\'')
-    runImdbFile.append('\n\njava -jar ')
+    String osName = OperatingSystem.current().getName();
+    String osVersion = OperatingSystem.current().getVersion();
+    println "*** $osName $osVersion was detected."
+    String runFile = "runFX-$javafx.version"
+
+    if (OperatingSystem.current().isLinux()) {
+        runFile += '.sh';
+    } else if (OperatingSystem.current().isUnix()) {
+        // Consider UNIX.
+    } else if (OperatingSystem.current().isWindows()) {
+        runFile += '.bat';
+    } else if (OperatingSystem.current().isMacOsX()) {
+        // Consider OS X.
+    } else {
+        // Unknown OS.
+    }
+
+    def runImdbFile = Paths.get(buildDir.getAbsolutePath(), 'libs', runFile).toFile()
+    //runImdbFile.append('echo \'Start program\'')
+    //runImdbFile.append('\necho \'.............\'')
+    runImdbFile.append('\n\n%J11%\\bin\\java ')
+    runImdbFile.append('--module-path %JFX11% ')
+    runImdbFile.append('--add-modules=javafx.fxml,javafx.controls,javafx.media,javafx.web,javafx.swing ')
+    runImdbFile.append('--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED ')
+    runImdbFile.append('--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED ')
+    runImdbFile.append('-jar ')
     runImdbFile.append(jarNameFx)
     runImdbFile.append('.jar')
-    runImdbFile.append('\n\necho \'.............\'')
-    runImdbFile.append('\necho \'Program ended\'')
+    //runImdbFile.append('\n\necho \'.............\'')
+    //runImdbFile.append('\necho \'Program ended\'')
     println("addScriptToRunFXFile $jarNameFx")
 }
 
@@ -55,7 +88,7 @@ def copyApplicationProperties = copySpec {
 
 task versionTxt()  {
     doLast {
-        new File(Paths.get(buildDir.getAbsolutePath(), 'resources', 'main', 'version.txt').toString()).text = "$version"
+        new File(Paths.get(buildDir.getAbsolutePath(), 'resources', 'main', 'version.txt').toString()).text = "$appVersion"
     }
 }
 
@@ -69,10 +102,10 @@ task oneJar(type: Jar) {
     dependsOn copyAppPropertiesTask
     manifest {
         attributes 'Implementation-Title': 'DownloadStationHelper',
-                'Implementation-Version': version,
+                'Implementation-Version': appVersion,
                 'Main-Class': mainClassName
     }
-    baseName = project.name + '-all'
+    appVersion = project.name + '-all'
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
 }
@@ -87,14 +120,14 @@ task fxJar(type: Jar) {
     dependsOn copyToLib, copyAppPropertiesTask, versionTxt
     manifest {
         attributes 'Implementation-Title': 'DownloadStationHelper',
-                'Implementation-Version': version,
+                'Implementation-Version': appVersion,
                 'Main-Class': fxMainClassName,
                 'Class-path': configurations.compile.collect { 'lib/' + it.getName() }.join(' ')
     }
     doLast {
         addScriptToRunFXFile()
     }
-    baseName = jarNameFx
+    archiveBaseName = jarNameFx
     with jar
 }
 
@@ -102,9 +135,9 @@ jar {
     dependsOn copyToLib, copyAppPropertiesTask
     manifest {
         attributes 'Implementation-Title': 'DownloadStationHelper',
-                'Implementation-Version': version,
+                'Implementation-Version': appVersion,
                 'Main-Class': mainClassName,
                 'Class-path': configurations.compile.collect { 'lib/' + it.getName() }.join(' ')
     }
-    baseName = jarName
+    archiveBaseName = jarName
 }
